[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/ui/main_menu.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/save_menu.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/pause_menu.tscn" id="4"]

[node name="Main" type="Node"]
script = ExtResource("1")

[node name="MainMenu" parent="." instance=ExtResource("2")]

[node name="WorldLoader" type="Node" parent="."]

[node name="SaveMenu" parent="." instance=ExtResource("3")]

[node name="PauseMenu" parent="." instance=ExtResource("4")]
